Added ">" bc it was missing for some reason

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tavernventures</title>
-    <link src="style.css">
-    <link src="server.js>"
-    <link rel="icon" type="image/x-icon"
-    href="/images/favicon.ico">
-</head>
-<body>
-    
-</body>
-</html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tavernventures</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link src="style.css">
+        <link src="server.js>">
+    </head>
+
+    <body>
+
+    </body>
+
+    </html>
