--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tavernventures</title>
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-        <link src="style.css">
-        <link src="server.js>">
+        <link rel="stylesheet" href="style.css">
+        <script src="server.js>"></script>
+        <link rel="icon" href="images/pixil-frame-0 (8).png">
     </head>
 
     <body>
-
+        <img src="images/pixil-frame-0 (1).png">
     </body>
 
     </html>
