icon still dont work

--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tavernventures</title>
+        <!--The Icon don't werk-->
+        <!--ik :c-->
         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-        <link src="style.css">
-        <link src="server.js>">
+        <link rel="stylesheet" href="style.css">
+        <script src="server.js>"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
-
+        <section class="header">
+            <h1>Tavernventures</h1>
+        </section>
+        <section class="insert-name">
+            <input type="text" class="textbox" name="txtbox">Enter Name Here</input>
+        </section>
     </body>
-
+ 
     </html>
