--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Tavernventures</title>
         <!--The Icon don't werk-->
         <!--ik :c-->
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="images/pixil-frame-0 (8).png">
         <link rel="stylesheet" href="style.css">
         <script src="server.js>"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
