--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <section class="header">
             <h1>Tavernventures</h1>
         </section>
-        <section class="insert-name">
-            <input type="text" class="textbox" name="txtbox">Enter Name Here</input>
+        <section class="ins-name">
+            <p>Welcome to Tavernventures! <br> What should we call you by?</p>
+            <input type="text" class="textbox" name="txtbox"></input>
         </section>
     </body>
  
