--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" href="style.css">
         <script src="server.js>"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
 
     </head>
 
@@ -20,10 +20,8 @@
         <section class="header">
             <h1>Tavernventures</h1>
         </section>
-        <section class="ins-name">
-            <p>Welcome to Tavernventures! <br> What should we call you by?</p>
-            <input type="text" class="textbox" name="txtbox"></input>
-        </section>
+        <button class="button"><a href="character-customization.html">Play</a></button>
+
     </body>
- 
+
     </html>
