--- a/character-customization.html
+++ b/character-customization.html
@@ -19,37 +19,39 @@
         <h1>Tavernventures</h1>
     </section>
     <button class="butt-on"><a href="index.html">Back</a></button>
-    <section class="ins-name">
-        <p>Welcome to Tavernventures! <br> What should we call you by?</p>
-        <input type="text" class="textbox" name="txtbox"></input>
-    </section>
-    <section class="strt-game">
-        <p>Please type "Start" or "Begin" to begin playing.</p>
-        <input type="text" class="textbox" name="txtbox"></input>
-    </section>
-    <section class="slideshow-container">
-        <!-- images with number and caption text -->
-        <section class="mySlides fade">
-            <section class="numbertext">1 / 3</section>
-            <img src="images/pixil-frame-0 (1).png" style="width:50%">
-            <section class="text">Caption Text</section>
+    <section class="pls-work">
+        <section class="ins-name">
+            <p>Welcome to Tavernventures! <br> What should we call you by?</p>
+            <input type="text" class="textbox" name="txtbox"></input>
         </section>
-
-        <section class="mySlides fade">
-            <section class="numbertext">2 / 3</section>
-            <img src="images/pixil-frame-0 (3).png" style="width:75%">
-            <section class="text">Caption Two</section>
+        <section class="strt-game">
+            <p>Press button when ready to play</p>
+            <button><a href="gameplay.html">Start</a></button>
         </section>
+        <section class="slideshow-container">
+            <!-- images with number and caption text -->
+            <section class="mySlides fade">
+                <section class="numbertext">1 / 3</section>
+                <img src="images/pixil-frame-0 (1).png" style="width:50%">
+                <section class="text">Caption Text</section>
+            </section>
 
-        <section class="mySlides fade">
-            <section class="numbertext">3 / 3</section>
-            <img src="images/pixil-frame-0 (4).png" style="width:75%">
-            <div class="text">Caption Three</div>
+            <section class="mySlides fade">
+                <section class="numbertext">2 / 3</section>
+                <img src="images/pixil-frame-0 (3).png" style="width:75%">
+                <section class="text">Caption Two</section>
+            </section>
+
+            <section class="mySlides fade">
+                <section class="numbertext">3 / 3</section>
+                <img src="images/pixil-frame-0 (4).png" style="width:75%">
+                <div class="text">Caption Three</div>
+            </section>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </section>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </section>
     <br>
 
