--- a/gameplay.html
+++ b/gameplay.html
@@ -13,6 +13,14 @@
 </head>
 <body>
     <h1 class="gameplaytitle">Tavernventures</h1>
-    <p class="gameplaytext">You wake up in a tavern, a little confused</p>
+    <section class="gameplay">
+        <p class="gameplaytext">You wake up in a tavern, a little confused</p>
+        <section>
+        <button class="options" id="tavernkeep"><a href="#tvkdialogue">Go to tavernkeep</a></button>
+        <p class="gameplaytext" id="tvkdialogue">"What would you like?"</p>
+        </section>
+        <button class="options" id="cards">Go to card playing table</button>
+        <button class="options" id="boasters">Go to table of boasters</button>
+    </section>
 </body>
 </html>
