--- a/character-customization.html
+++ b/character-customization.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/pixil-frame-0 (8).png">
     <link rel="stylesheet" href="style.css">
     <a href="index.html"></a>
-    <script src="server.js"></script>
+    <script defer src="server.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
