--- a/gameplay.html
+++ b/gameplay.html
@@ -1,26 +1,37 @@
 <DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tavernventures</title>
-    <link rel="icon" type="image/x-icon" href="images/pixil-frame-0 (8).png">
-    <link rel="stylesheet" href="style.css">
-    <script src="server.js>"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1 class="gameplaytitle">Tavernventures</h1>
-    <section class="gameplay">
-        <p class="gameplaytext">You wake up in a tavern, a little confused</p>
-        <section>
-        <button class="options" id="tavernkeep"><a href="#tvkdialogue">Go to tavernkeep</a></button>
-        <p class="gameplaytext" id="tvkdialogue">"What would you like?"</p>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tavernventures</title>
+        <link rel="icon" type="image/x-icon" href="images/pixil-frame-0 (8).png">
+        <link rel="stylesheet" href="style.css">
+        <script defer src="server.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+        <h1 class="gameplaytitle">Tavernventures</h1>
+        <section class="gameplay" id="start">
+            <p class="gameplaytext">You wake up in a tavern, a little confused</p>
+            <section class="gameBtn">
+                <button class="options" id="tavernkeep" value="tavernkeep"><a href="#tvkdialogue" >Go to tavernkeep</a></button>
+                <button class="options" id="cards" value="cards"><a href="#cardtable">Go to card playing table</a></button>
+                <button class="options" id="boasters" value="boasters"><a href="#boastertable">Go to table of boasters</a></button>
+            </section>
         </section>
-        <button class="options" id="cards">Go to card playing table</button>
-        <button class="options" id="boasters">Go to table of boasters</button>
-    </section>
-</body>
-</html>
+
+        <section id="tvkdialogue" class="hidden">
+            <p class="gameplaytext">"What would you like?"</p>
+            <section class="gameBtn">
+                <button class="options" id="teamup"><a href="#teaming">Ask to team up</a></button>
+                <button class="options" id="buytavern"><a href="#tavernshop">Buy items</a></button>
+                <button class="options" id="backtavern"><a href="#gobacktavern">Back</a></button>
+            </section>
+        </section>
+    </body>
+
+    </html>
