--- a/gameplay.html
+++ b/gameplay.html
@@ -18,7 +18,7 @@
         <section class="gameplay" id="start">
             <p class="gameplaytext">You wake up in a tavern, a little confused</p>
             <section class="gameBtn">
-                <button class="options" id="tavernkeep" value="tavernkeep"><a href="#tvkdialogue" >Go to tavernkeep</a></button>
+                <button class="options" id="tavernkeep" value="tavernkeep">Go to tavernkeep</button>
                 <button class="options" id="cards" value="cards"><a href="#cardtable">Go to card playing table</a></button>
                 <button class="options" id="boasters" value="boasters"><a href="#boastertable">Go to table of boasters</a></button>
             </section>
@@ -31,6 +31,13 @@
                 <button class="options" id="buytavern"><a href="#tavernshop">Buy items</a></button>
                 <button class="options" id="backtavern"><a href="#gobacktavern">Back</a></button>
             </section>
+            <section id="cardtable" class="hidden">
+                <p class="gameplaytext">You walk over to the table with people playing cards</p>
+                <section class="gameBtn">
+                    <button class="options" id="teamup"><a href="#teaming">Ask to team up</a></button>
+                    <button class="options" id="buytavern"><a href="#tavernshop">Buy items</a></button>
+                    <button class="options" id="backtavern"><a href="#gobacktavern">Back</a></button>
+                </section>
         </section>
     </body>
 
