--- a/gameplay.html
+++ b/gameplay.html
@@ -18,25 +18,25 @@
         <section class="gameplay" id="start">
             <p class="gameplaytext">You wake up in a tavern, a little confused</p>
             <section class="gameBtn">
-                <button class="options" id="tavernkeep" value="tavernkeep">Go to tavernkeep</button>
-                <button class="options" id="cards" value="cards"><a href="#cardtable">Go to card playing table</a></button>
-                <button class="options" id="boasters" value="boasters"><a href="#boastertable">Go to table of boasters</a></button>
+                <button class="options" id="tavernkeep" value="tavernkeep">Talk to tavernkeep</button>
+                <button class="options" id="cards" value="cards">Go to card playing table</button>
+                <button class="options" id="boasters" value="boasters">Go to table of boasters</button>
             </section>
         </section>
 
         <section id="tvkdialogue" class="hidden">
             <p class="gameplaytext">"What would you like?"</p>
             <section class="gameBtn">
-                <button class="options" id="teamup"><a href="#teaming">Ask to team up</a></button>
-                <button class="options" id="buytavern"><a href="#tavernshop">Buy items</a></button>
-                <button class="options" id="backtavern"><a href="#gobacktavern">Back</a></button>
+                <button class="options" id="teamup" value="teamup">Ask to team up</button>
+                <button class="options" id="buytavern" value="buytavern">Buy items</button>
+                <button class="options" id="backtavern" value="backtavern">Back</button>
             </section>
+
             <section id="cardtable" class="hidden">
                 <p class="gameplaytext">You walk over to the table with people playing cards</p>
                 <section class="gameBtn">
-                    <button class="options" id="teamup"><a href="#teaming">Ask to team up</a></button>
-                    <button class="options" id="buytavern"><a href="#tavernshop">Buy items</a></button>
-                    <button class="options" id="backtavern"><a href="#gobacktavern">Back</a></button>
+                    <button class="options" id="cardplay" value="cardplay">Play cards</button>
+                    <button class="options" id="backcards" value="backcards">Back</button>
                 </section>
         </section>
     </body>
