--- a/character-customization.html
+++ b/character-customization.html
@@ -26,7 +26,7 @@
         </section>
         <section class="strt-game">
             <p>Press button when ready to play</p>
-            <button><a href="gameplay.html">Start</a></button>
+            <button class="butt-o-n"><a href="gameplay.html">Start</a></button>
         </section>
         <section class="slideshow-container">
             <!-- images with number and caption text -->
