--- a/gameplay.html
+++ b/gameplay.html
@@ -42,9 +42,6 @@
                 <button class="options" id="backtavern" value="backtavern">Back</button>
             </section>
         </section>
-
-
-
         <section id="team" class="hidden">
             <p class="gameplaytext">"Oh...well, how come?"</p>
             <section class="gameBtn">
@@ -53,23 +50,20 @@
                 <button class="options" id="backteamask" value="backteamask">Back</button>
             </section>
         </section>
-
         <section id="teamyes" class="hidden">
             <p class="joinsuccess">The tavernkeep has joined your team!</p>
-            <p class="gameplaytext">"...I guess that sounds pretty intriguing...sure."</p>
+            <p class="gameplaytext">"I guess that sounds pretty intriguing...alright, sure."</p>
             <section class="gameBtn">
                 <button class="options" id="yesteam" value="yesteam">Continue</button>
             </section>
         </section>
-
         <section id="teamno" class="hidden">
             <p class="gameplaytext">"...No thanks. I'm not interested."</p>
             <section class="gameBtn">
                 <button class="options" id="noteam" value="noteam">Continue</button>
             </section>
         </section>
-
-        <section id="deathorreset" class="hidden">
+        <section id="deathorreset1" class="hidden">
             <h2>YOU LOSE</h2>
             <p>After the tavernkeep said no to your request, you cried until there was no water left in your system. You
                 then shriveled up like a raisin and died from dehydration.</p>
@@ -77,9 +71,108 @@
                 <button class="options" id="tvkreset" value="tvkreset">Restart</button>
             </section>
         </section>
-
-
-
+        <section id="buytav" class="hidden">
+            <p class="gameplaytext">Click an item to see details</p>
+            <section class="gameBtn">
+                <button class="options" id="item1" value="item1">Item 1</button>
+                <button class="options" id="item2" value="item2">Item 2</button>
+                <button class="options" id="item3" value="item3">Item 3</button>
+                <button class="options" id="potion1" value="potion1">Potion 1</button>
+                <button class="options" id="potion2" value="potion2">Potion 2</button>
+                <button class="options" id="potion3" value="potion3">Potion 3</button>
+                <button class="options" id="backtavshop" value="backtavshop">Back</button>
+            </section>
+        </section>
+        <section id="item1details" class="hidden">
+            <h3 class="itemdesc">Item 1</h3>
+            <p class="gameplaytext">description</p>
+            <section class="gameBtn">
+                <button class="options" id="buyitem1" value="buyitem1">Buy</button>
+                <button class="options" id="backitem1" value="backitem1">Back</button>
+            </section>
+        </section>
+        <section id="item1confirm" class="hidden">
+            <p>Buy item?</p>
+            <section class="gameBtn">
+                <button class="options" id="item1yes" value="item1yes">Yes</button>
+                <button class="options" id="item1no" value="item1no">No</button>
+            </section>
+        </section>
+        <section id="item2details" class="hidden">
+            <h3 class="itemdesc">Item 2</h3>
+            <p class="gameplaytext">description</p>
+            <section class="gameBtn">
+                <button class="options" id="buyitem2" value="buyitem2">Buy</button>
+                <button class="options" id="backitem2" value="backitem2">Back</button>
+            </section>
+        </section>
+        <section id="item2confirm" class="hidden">
+            <p>Buy item?</p>
+            <section class="gameBtn">
+                <button class="options" id="item2yes" value="item2yes">Yes</button>
+                <button class="options" id="item2no" value="item2no">No</button>
+            </section>
+        </section>
+        <section id="item3details" class="hidden">
+            <h3 class="itemdesc">Item 3</h3>
+            <p class="gameplaytext">description</p>
+            <section class="gameBtn">
+                <button class="options" id="buyitem3" value="buyitem3">Buy</button>
+                <button class="options" id="backitem3" value="backitem3">Back</button>
+            </section>
+        </section>
+        <section id="item3confirm" class="hidden">
+            <p>Buy item?</p>
+            <section class="gameBtn">
+                <button class="options" id="item3yes" value="item3yes">Yes</button>
+                <button class="options" id="item3no" value="item3no">No</button>
+            </section>
+        </section>
+        <section id="potion1details" class="hidden">
+            <h3 class="itemdesc">Potion 1</h3>
+            <p class="gameplaytext">description</p>
+            <section class="gameBtn">
+                <button class="options" id="buypotion1" value="buypotion1">Buy</button>
+                <button class="options" id="backpotion1" value="backpotion1">Back</button>
+            </section>
+        </section>
+        <section id="potion1confirm" class="hidden">
+            <p>Buy item?</p>
+            <section class="gameBtn">
+                <button class="options" id="potion1yes" value="potion1yes">Yes</button>
+                <button class="options" id="potion1no" value="potion1no">No</button>
+            </section>
+        </section>
+        <section id="potion2details" class="hidden">
+            <h3 class="itemdesc">Potion 2</h3>
+            <p class="gameplaytext">description</p>
+            <section class="gameBtn">
+                <button class="options" id="buypotion2" value="buypotion2">Buy</button>
+                <button class="options" id="backpotion2" value="backpotion2">Back</button>
+            </section>
+        </section>
+        <section id="potion2confirm" class="hidden">
+            <p>Buy item?</p>
+            <section class="gameBtn">
+                <button class="options" id="potion2yes" value="potion2yes">Yes</button>
+                <button class="options" id="potion2no" value="potion2no">No</button>
+            </section>
+        </section>
+        <section id="potion3details" class="hidden">
+            <h3 class="itemdesc">Potion 3</h3>
+            <p class="gameplaytext">description</p>
+            <section class="gameBtn">
+                <button class="options" id="buypotion3" value="buypotion3">Buy</button>
+                <button class="options" id="backpotion3" value="backpotion3">Back</button>
+            </section>
+        </section>
+        <section id="potion3confirm" class="hidden">
+            <p>Buy item?</p>
+            <section class="gameBtn">
+                <button class="options" id="potion3yes" value="potion3yes">Yes</button>
+                <button class="options" id="potion3no" value="potion3no">No</button>
+            </section>
+        </section>
         <section id="cardtable" class="hidden">
             <p class="gameplaytext">You walk over to the table with people playing cards</p>
             <section class="gameBtn">
@@ -87,13 +180,34 @@
                 <button class="options" id="backcards" value="backcards">Back</button>
             </section>
         </section>
-
+        <section id="cardplayending" class="hidden">
+            <h2>ENDING</h2>
+            <p>Due to playing cards and getting addicted, you lost all your money. The tavernkeep then offered you a job
+                and a place to stay in the tavern. Since you were flat out broke and didn't know your way around, you
+                accepted the offer.</p>
+                <section class="gameBtn">
+                    <button class="options" id="cardreset" value="cardreset">Restart</button>
+                </section>
+        </section>
         <section id="boasttable" class="hidden">
             <p class="gameplaytext">You walk over to the table with boasting about past achievements</p>
             <section class="gameBtn">
                 <button class="options" id="boastsit" value="boastsit">Sit and listen</button>
                 <button class="options" id="backboast" value="backboast">Back</button>
             </section>
+        </section>
+        <section id="sitandisten" class="hidden">
+            <p class="gameplaytext">After sitting down, you hear amazing stories about beasts and monsters being
+                defeated.</p>
+            <section class="gameBtn">
+                <button class="options" id="boastcont" value="boastcont">Continue</button>
+            </section>
+        </section>
+
+        <section id="manask" class="hidden">
+            <p class="gameplaytext">Some time after, one of the people at the table looks at you. "What about you, kid?
+                You done anything worth mentioning?"</p>
+
         </section>
     </body>
 
