--- a/gameplay.html
+++ b/gameplay.html
@@ -16,7 +16,7 @@
     <body>
         <h1 class="gameplaytitle">Tavernventures</h1>
         <section class="intro" id="start">
-            <p>You wake up in a tavern, a little confused as to how you got there. The last thing
+            <p class="info">You wake up in a tavern, a little confused as to how you got there. The last thing
                 you remember is getting hit in the head with an orb for running away with some fruit you took from a
                 vendor because you were hungry...</p>
             <section class="gameBtn">
@@ -26,6 +26,7 @@
 
 
         <section class="hidden" id="gameplay">
+            <img src="images/maintav.png" class="backgrounds">
             <p class="gameplaytext">You are in the tavern</p>
             <section class="gameBtn">
                 <button class="options" id="tavernkeep" value="tavernkeep">Talk to tavernkeep</button>
@@ -35,6 +36,7 @@
         </section>
 
         <section id="tvkdialogue" class="hidden">
+            <img src="images/tavernkeep.png" class="backgrounds">
             <p class="gameplaytext">"What would you like?"</p>
             <section class="gameBtn">
                 <button class="options" id="teamup" value="teamup">Ask to team up</button>
@@ -43,6 +45,7 @@
             </section>
         </section>
         <section id="team" class="hidden">
+            <img src="images/tavernkeep.png" class="backgrounds">
             <p class="gameplaytext">"Oh...well, how come?"</p>
             <section class="gameBtn">
                 <button class="options" id="goodreason" value="goodreason">Give good reason</button>
@@ -51,6 +54,7 @@
             </section>
         </section>
         <section id="teamyes" class="hidden">
+            <img src="images/tavernkeep.png" class="backgrounds">
             <p class="joinsuccess">The tavernkeep has joined your team!</p>
             <p class="gameplaytext">"I guess that sounds pretty intriguing...alright, sure."</p>
             <section class="gameBtn">
@@ -58,6 +62,7 @@
             </section>
         </section>
         <section id="teamno" class="hidden">
+            <img src="images/tavernkeep.png" class="backgrounds">
             <p class="gameplaytext">"...No thanks. I'm not interested."</p>
             <section class="gameBtn">
                 <button class="options" id="noteam" value="noteam">Continue</button>
