--- a/character-customization.html
+++ b/character-customization.html
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-    <section class="header">
-        <h1>Tavernventures</h1>
-    </section>
     <button class="butt-on"><a href="index.html">Back</a></button>
     <section class="pls-work">
         <section class="ins-name">
@@ -25,34 +22,11 @@
             <input type="text" class="textbox" name="txtbox"></input>
         </section>
         <section class="strt-game">
-            <p>Press button when ready to play</p>
+            <p>Ready?</p>
             <button class="butt-o-n"><a href="gameplay.html">Start</a></button>
         </section>
-        <section class="slideshow-container">
-            <!-- images with number and caption text -->
-            <section class="mySlides fade">
-                <section class="numbertext">1 / 3</section>
-                <img src="images/pixil-frame-0 (1).png" style="width:50%">
-                <section class="text">Caption Text</section>
-            </section>
-
-            <section class="mySlides fade">
-                <section class="numbertext">2 / 3</section>
-                <img src="images/pixil-frame-0 (71).png" style="width:50%">
-                <section class="text">Caption Two</section>
-            </section>
-
-            <section class="mySlides fade">
-                <section class="numbertext">3 / 3</section>
-                <img src="images/pixil-frame-0 (4).png" style="width:75%">
-                <div class="text">Caption Three</div>
-            </section>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </section>
-    </section>
+        <h2 class="slideshow-container">This is you!</h2>
+        <img src="images/character.png" class="slideshow-container">
     <br>
 
 </body>
