--- a/gameplay.html
+++ b/gameplay.html
@@ -70,6 +70,7 @@
         </section>
         <section id="deathorreset1" class="hidden">
             <h2>YOU LOSE</h2>
+            <img src="images/gameover.png" class="backgrounds">
             <p>After the tavernkeep said no to your request, you cried until there was no water left in your system. You
                 then shriveled up like a raisin and died from dehydration.</p>
             <section class="gameBtn">
@@ -79,103 +80,111 @@
         <section id="buytav" class="hidden">
             <p class="gameplaytext">Click an item to see details</p>
             <section class="gameBtn">
-                <button class="options" id="item1" value="item1">Item 1</button>
-                <button class="options" id="item2" value="item2">Item 2</button>
-                <button class="options" id="item3" value="item3">Item 3</button>
-                <button class="options" id="potion1" value="potion1">Potion 1</button>
-                <button class="options" id="potion2" value="potion2">Potion 2</button>
-                <button class="options" id="potion3" value="potion3">Potion 3</button>
+                <button class="options" id="item1" value="item1">Turtle Keychain</button>
+                <button class="options" id="item2" value="item2">Apple</button>
+                <button class="options" id="item3" value="item3">Wooden Sword</button>
+                <button class="options" id="potion1" value="potion1">Sleepy Potion</button>
+                <button class="options" id="potion2" value="potion2">Charisma Potion</button>
+                <button class="options" id="potion3" value="potion3">Unlabeled Potion</button>
                 <button class="options" id="backtavshop" value="backtavshop">Back</button>
             </section>
         </section>
         <section id="item1details" class="hidden">
-            <h3 class="itemdesc">Item 1</h3>
-            <p class="gameplaytext">description</p>
+            <img src="images/turtle.png" class="backgrounds">
+            <p class="gameplaytext">Turtle Keychain - Gives you good luck, if you believe</p>
             <section class="gameBtn">
                 <button class="options" id="buyitem1" value="buyitem1">Buy</button>
                 <button class="options" id="backitem1" value="backitem1">Back</button>
             </section>
         </section>
         <section id="item1confirm" class="hidden">
-            <p>Buy item?</p>
+            <p class="info">Buy item?</p>
             <section class="gameBtn">
                 <button class="options" id="item1yes" value="item1yes">Yes</button>
                 <button class="options" id="item1no" value="item1no">No</button>
             </section>
         </section>
         <section id="item2details" class="hidden">
-            <h3 class="itemdesc">Item 2</h3>
-            <p class="gameplaytext">description</p>
+            <img src="images/apple.png" class="backgrounds">
+            <p class="gameplaytext">Apple - Nice and refreshing. May be safe, not confirmed</p>
             <section class="gameBtn">
                 <button class="options" id="buyitem2" value="buyitem2">Buy</button>
                 <button class="options" id="backitem2" value="backitem2">Back</button>
             </section>
         </section>
         <section id="item2confirm" class="hidden">
-            <p>Buy item?</p>
+            <p class="info">Buy item?</p>
             <section class="gameBtn">
                 <button class="options" id="item2yes" value="item2yes">Yes</button>
                 <button class="options" id="item2no" value="item2no">No</button>
             </section>
         </section>
         <section id="item3details" class="hidden">
-            <h3 class="itemdesc">Item 3</h3>
-            <p class="gameplaytext">description</p>
+            <img src="images/sword.png" class="backgrounds">
+            <p class="gameplaytext">Wooden Sword - Made from the wood used for the tavern. Pretty strong, surprisingly</p>
             <section class="gameBtn">
                 <button class="options" id="buyitem3" value="buyitem3">Buy</button>
                 <button class="options" id="backitem3" value="backitem3">Back</button>
             </section>
         </section>
         <section id="item3confirm" class="hidden">
-            <p>Buy item?</p>
+            <p class="info">Buy item?</p>
             <section class="gameBtn">
                 <button class="options" id="item3yes" value="item3yes">Yes</button>
                 <button class="options" id="item3no" value="item3no">No</button>
             </section>
         </section>
         <section id="potion1details" class="hidden">
-            <h3 class="itemdesc">Potion 1</h3>
-            <p class="gameplaytext">description</p>
+            <img src="images/sleepypotion.png" class="backgrounds">
+            <p class="gameplaytext">Sleepy Potion - Makes you tired</p>
             <section class="gameBtn">
                 <button class="options" id="buypotion1" value="buypotion1">Buy</button>
                 <button class="options" id="backpotion1" value="backpotion1">Back</button>
             </section>
         </section>
         <section id="potion1confirm" class="hidden">
-            <p>Buy item?</p>
+            <p class="info">Buy item?</p>
             <section class="gameBtn">
                 <button class="options" id="potion1yes" value="potion1yes">Yes</button>
                 <button class="options" id="potion1no" value="potion1no">No</button>
             </section>
         </section>
         <section id="potion2details" class="hidden">
-            <h3 class="itemdesc">Potion 2</h3>
-            <p class="gameplaytext">description</p>
+            <img src="images/rizzpotion.png" class="backgrounds">
+            <p class="gameplaytext">Charisma Potion - Ups your game B) </p>
             <section class="gameBtn">
                 <button class="options" id="buypotion2" value="buypotion2">Buy</button>
                 <button class="options" id="backpotion2" value="backpotion2">Back</button>
             </section>
         </section>
         <section id="potion2confirm" class="hidden">
-            <p>Buy item?</p>
+            <p class="info">Buy item?</p>
             <section class="gameBtn">
                 <button class="options" id="potion2yes" value="potion2yes">Yes</button>
                 <button class="options" id="potion2no" value="potion2no">No</button>
             </section>
         </section>
         <section id="potion3details" class="hidden">
-            <h3 class="itemdesc">Potion 3</h3>
-            <p class="gameplaytext">description</p>
+            <img src="images/instdeath.png" class="backgrounds">
+            <p class="gameplaytext">Unlabeled Potion - Definitely not harmful at all</p>
             <section class="gameBtn">
                 <button class="options" id="buypotion3" value="buypotion3">Buy</button>
                 <button class="options" id="backpotion3" value="backpotion3">Back</button>
             </section>
         </section>
         <section id="potion3confirm" class="hidden">
-            <p>Buy item?</p>
+            <p class="info"><s>Buy</s> Drink item?</p>
             <section class="gameBtn">
                 <button class="options" id="potion3yes" value="potion3yes">Yes</button>
                 <button class="options" id="potion3no" value="potion3no">No</button>
+            </section>
+        </section>
+        <section id="deathorreset2" class="hidden">
+            <h2>YOU LOSE</h2>
+            <img src="images/gameover.png" class="backgrounds">
+            <p class="info">The potion was an instant death potion. You died as soon as you were done drinking it.</p>
+            <section class="gameBtn">
+                <button class="options" id="potionreset" value="potionreset">Restart</button>
             </section>
         </section>
         <section id="cardtable" class="hidden">
